--- a/packages/isar/pubspec.yaml
+++ b/packages/isar/pubspec.yaml
@@ -5,21 +5,22 @@ repository: https://github.com/isar-community/isar/tree/main/packages/isar
 homepage: https://github.com/isar-community/isar
 issue_tracker: https://github.com/isar-community/isar/issues
 documentation: https://isar.dev
-publish_to: https://pub.isar-community.dev/
+publish_to: none
 funding:
   - https://github.com/sponsors/leisim/
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ^3.0.0
+  flutter: ">= 3.22.0"
 
 dependencies:
   ffi: ">=2.0.0 <3.0.0"
-#  isar_test:
-#    path: ../isar_test
+  #  isar_test:
+  #    path: ../isar_test
   js: any
   meta: ^1.7.0
 
 dev_dependencies:
-  ffigen: "^7.0.0"
+  ffigen: ^13.0.0
   test: ^1.21.1
-  very_good_analysis: ^3.0.1
+  very_good_analysis: ^6.0.0
