--- a/packages/isar_flutter_libs/android/build.gradle
+++ b/packages/isar_flutter_libs/android/build.gradle
@@ -1,16 +1,16 @@
-group 'dev.isar.isar_flutter_libs'
-version '1.0'
-
 buildscript {
     repositories {
         google()
         mavenCentral()
     }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.1'
-    }
 }
+
+plugins {
+    id 'com.android.library'
+}
+
+group 'dev.isar.isar_flutter_libs'
+version '1.0'
 
 rootProject.allprojects {
     repositories {
@@ -19,17 +19,15 @@ rootProject.allprojects {
     }
 }
 
-apply plugin: 'com.android.library'
-
 android {
     if (project.android.hasProperty("namespace")) {
         namespace 'dev.isar.isar_flutter_libs'
     }
 
-    compileSdkVersion 30
+    compileSdk 34
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 30
     }
 }
 
