--- a/packages/isar_flutter_libs/android/gradle/wrapper/gradle-wrapper.properties
+++ b/packages/isar_flutter_libs/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,8 @@
-#Sat Nov 12 16:30:49 CET 2022
+#Sat Jul 27 16:15:55 CST 2024
 distributionBase=GRADLE_USER_HOME
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.4-bin.zip
 distributionPath=wrapper/dists
-zipStorePath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.7-bin.zip
+networkTimeout=10000
+validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
