--- a/packages/isar_flutter_libs/android/settings.gradle
+++ b/packages/isar_flutter_libs/android/settings.gradle
@@ -1,1 +1,13 @@
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+
+plugins {
+    id 'com.android.library' version '8.5.1' apply false
+}
+
 rootProject.name = 'isar_flutter_libs'
