--- a/packages/isar_flutter_libs/pubspec.yaml
+++ b/packages/isar_flutter_libs/pubspec.yaml
@@ -3,7 +3,7 @@ description: Isar Core binaries for the Isar Database. Needs to be included for 
 version: 3.1.7
 repository: https://github.com/isar-community/isar
 homepage: https://isar.dev
-publish_to: https://pub.isar-community.dev/
+publish_to: none
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -12,9 +12,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  isar: 
-    version: 3.1.7
-    hosted: https://pub.isar-community.dev
+  isar:
+    # version: 3.1.7
+    # hosted: https://pub.isar-community.dev
+    path: ../isar
 
 flutter:
   plugin:
