--- a/packages/isar_generator/pubspec.yaml
+++ b/packages/isar_generator/pubspec.yaml
@@ -3,10 +3,10 @@ description: Code generator for the Isar Database. Finds classes annotated with 
 version: 3.1.7
 repository: https://github.com/isar-community/isar
 homepage: https://isar.dev
-publish_to: https://pub.isar-community.dev/
+publish_to: none
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=3.4.0 <4.0.0"
 
 dependencies:
   analyzer: ">=4.6.0 <7.0.0"
@@ -14,9 +14,10 @@ dependencies:
   dart_style: ^2.2.3
   dartx: ^1.1.0
   glob: ^2.0.2
-  isar: 
-    version: 3.1.7
-    hosted: https://pub.isar-community.dev
+  isar:
+    path: ../isar
+    # version: 3.1.7
+    # hosted: https://pub.isar-community.dev
   path: ^1.8.1
   source_gen: ^1.2.2
   xxh3: ^1.0.1
@@ -25,4 +26,4 @@ dev_dependencies:
   build_test: ^2.1.5
   matcher: ^0.12.12
   test: ^1.21.0
-  very_good_analysis: ^3.0.1
+  very_good_analysis: ^6.0.0
